# opengl

light_prepass/: CMakeLists.txt  deltatime.hpp  light.cpp  light.hpp  main.cpp  model.hpp  object.cpp  object.hpp  renderTexture.cpp  renderTexture.hpp  rendering.cpp  rendering.hpp  shader.cpp  utils.cpp  window.cpp
light_prepass/main.dSYM/Contents/Resources/DWARF/: main
light_prepass/old/: benchmarks
light_prepass/shaders/: renderLightSphere.frag  renderPositionNormalsAlbedo.vert  showFinal.frag  showTexture.vert
spinning_cube/: GLShader  GLShader.cpp  GLShader.hpp  deltatime  deltatime.cpp  deltatime.hpp  frag.frag  light  light.cpp  light.hpp  load_shader.cpp  load_shader.hpp  main  main.cpp  model  model.cpp  model.hpp  object  object.cpp  object.hpp  renderTexture  renderTexture.cpp  renderTexture.hpp  rendering.cpp  rendering.hpp  shader.cpp  shader.hpp  tempCodeRunnerFile  utils.cpp  utils.hpp  vert.shader  vert.vert  window  window.cpp  window.hpp
spinning_cube/models/: square_with_cube_smooth_textured.mtl
spinning_cube/shaders/: depth.frag  depth.vert  render.frag  render.vert  renderColorDepthNormals.frag  renderColorDepthNormals.vert  renderDepth.frag  renderDepth.vert  renderDepthNormals.frag  renderDepthNormals.vert  renderLightSphere.frag  renderLightSphere.vert  renderPositionNormalsAlbedo.frag  renderPositionNormalsAlbedo.vert  renderToLightmap.frag  renderToLightmap.vert  renderToScreen.frag  renderToScreen.vert  showDepth.frag  showDepth.vert  showDepthNormals.frag  showFinal.frag  showFinal.vert  showLightmap.frag  showNormals.frag  vert.vert  (+3 more)
(+3 files in other folders)
